set(
	FRUITAPP_CEGUI_FILES
	fruitapp/include/fruitapp/gui/ce/button.hpp
	fruitapp/include/fruitapp/gui/ce/combobox.hpp
	fruitapp/include/fruitapp/gui/ce/dialogs/highscore.hpp
	fruitapp/include/fruitapp/gui/ce/dialogs/ingame_menu.hpp
	fruitapp/include/fruitapp/gui/ce/dialogs/main_menu.hpp
	fruitapp/include/fruitapp/gui/ce/dialogs/name_chooser.hpp
	fruitapp/include/fruitapp/gui/ce/dialogs/ranking.hpp
	fruitapp/include/fruitapp/gui/ce/dialogs/settings.hpp
	fruitapp/include/fruitapp/gui/ce/get_model.hpp
	fruitapp/include/fruitapp/gui/ce/post_model.hpp
	fruitapp/include/fruitapp/gui/ce/progress_slider.hpp
	fruitapp/include/fruitapp/gui/ce/system.hpp
	fruitapp/include/fruitapp/gui/ce/system_fwd.hpp
	fruitapp/include/fruitapp/gui/ce/table/column.hpp
	fruitapp/include/fruitapp/gui/ce/table/column_sequence.hpp
	fruitapp/include/fruitapp/gui/ce/table/model.hpp
	fruitapp/include/fruitapp/gui/ce/table/model_fwd.hpp
	fruitapp/include/fruitapp/gui/ce/table/row.hpp
	fruitapp/include/fruitapp/gui/ce/table/row_added.hpp
	fruitapp/include/fruitapp/gui/ce/table/row_added_fn.hpp
	fruitapp/include/fruitapp/gui/ce/table/row_index.hpp
	fruitapp/include/fruitapp/gui/ce/table/row_removed.hpp
	fruitapp/include/fruitapp/gui/ce/table/row_removed_fn.hpp
	fruitapp/include/fruitapp/gui/ce/table/view.hpp
	fruitapp/src/gui/ce/button.cpp
	fruitapp/src/gui/ce/combobox.cpp
	fruitapp/src/gui/ce/dialogs/highscore.cpp
	fruitapp/src/gui/ce/dialogs/ingame_menu.cpp
	fruitapp/src/gui/ce/dialogs/main_menu.cpp
	fruitapp/src/gui/ce/dialogs/name_chooser.cpp
	fruitapp/src/gui/ce/dialogs/ranking.cpp
	fruitapp/src/gui/ce/dialogs/settings.cpp
	fruitapp/src/gui/ce/get_model.cpp
	fruitapp/src/gui/ce/post_model.cpp
	fruitapp/src/gui/ce/progress_slider.cpp
	fruitapp/src/gui/ce/system.cpp
	fruitapp/src/gui/ce/table/column.cpp
	fruitapp/src/gui/ce/table/model.cpp
	fruitapp/src/gui/ce/table/view.cpp
)

set(
	FRUITAPP_FILES
	fruitapp/include/fruitapp/ambient_intensity.hpp
	fruitapp/include/fruitapp/background/base.hpp
	fruitapp/include/fruitapp/background/base_fwd.hpp
	fruitapp/include/fruitapp/background/base_scoped_ptr.hpp
	fruitapp/include/fruitapp/background/base_unique_ptr.hpp
	fruitapp/include/fruitapp/background/cg.hpp
	fruitapp/include/fruitapp/background/cg_fwd.hpp
	fruitapp/include/fruitapp/background/ffp.hpp
	fruitapp/include/fruitapp/background/ffp_fwd.hpp
	fruitapp/include/fruitapp/background/node.hpp
	fruitapp/include/fruitapp/background/repetitions.hpp
	fruitapp/include/fruitapp/background/vf/format.hpp
	fruitapp/include/fruitapp/background/vf/part.hpp
	fruitapp/include/fruitapp/background/vf/position.hpp
	fruitapp/include/fruitapp/background/vf/texcoord.hpp
	fruitapp/include/fruitapp/background/vf/vertex_view.hpp
	fruitapp/include/fruitapp/config_variables.hpp
	fruitapp/include/fruitapp/config_variables_fwd.hpp
	fruitapp/include/fruitapp/current_commit.hpp
	fruitapp/include/fruitapp/cursor_sound.hpp
	fruitapp/include/fruitapp/cursor_trail.hpp
	fruitapp/include/fruitapp/cut_context_fwd.hpp
	fruitapp/include/fruitapp/depths/overlay.hpp
	fruitapp/include/fruitapp/depths/root.hpp
	fruitapp/include/fruitapp/depths/scene.hpp
	fruitapp/include/fruitapp/directional_light_source.hpp
	fruitapp/include/fruitapp/directional_light_source_from_json.hpp
	fruitapp/include/fruitapp/directional_light_source_fwd.hpp
	fruitapp/include/fruitapp/exception.hpp
	fruitapp/include/fruitapp/fruit/area.hpp
	fruitapp/include/fruitapp/fruit/box3.hpp
	fruitapp/include/fruitapp/fruit/callbacks/cut.hpp
	fruitapp/include/fruitapp/fruit/callbacks/cut_fn.hpp
	fruitapp/include/fruitapp/fruit/callbacks/remove.hpp
	fruitapp/include/fruitapp/fruit/callbacks/remove_fn.hpp
	fruitapp/include/fruitapp/fruit/callbacks/spawn.hpp
	fruitapp/include/fruitapp/fruit/callbacks/spawn_fn.hpp
	fruitapp/include/fruitapp/fruit/cut_context.hpp
	fruitapp/include/fruitapp/fruit/cut_context_fwd.hpp
	fruitapp/include/fruitapp/fruit/cut_context_unique_ptr.hpp
	fruitapp/include/fruitapp/fruit/cut_mesh.hpp
	fruitapp/include/fruitapp/fruit/cut_mesh_result.hpp
	fruitapp/include/fruitapp/fruit/cut_mesh_result_fwd.hpp
	fruitapp/include/fruitapp/fruit/hull/intersection_pair.hpp
	fruitapp/include/fruitapp/fruit/hull/projected.hpp
	fruitapp/include/fruitapp/fruit/hull/ring.hpp
	fruitapp/include/fruitapp/fruit/hull/trail_intersection.hpp
	fruitapp/include/fruitapp/fruit/make_coordinate_system.hpp
	fruitapp/include/fruitapp/fruit/manager.hpp
	fruitapp/include/fruitapp/fruit/manager_fwd.hpp
	fruitapp/include/fruitapp/fruit/material/diffuse_coefficient.hpp
	fruitapp/include/fruitapp/fruit/material/diffuse_color.hpp
	fruitapp/include/fruitapp/fruit/material/from_json.hpp
	fruitapp/include/fruitapp/fruit/material/object.hpp
	fruitapp/include/fruitapp/fruit/material/specular_coefficient.hpp
	fruitapp/include/fruitapp/fruit/material/specular_color.hpp
	fruitapp/include/fruitapp/fruit/material/specular_shininess.hpp
	fruitapp/include/fruitapp/fruit/mesh.hpp
	fruitapp/include/fruitapp/fruit/mesh_fwd.hpp
	fruitapp/include/fruitapp/fruit/mesh_scoped_ptr.hpp
	fruitapp/include/fruitapp/fruit/mesh_to_point_cloud.hpp
	fruitapp/include/fruitapp/fruit/mesh_to_shape.hpp
	fruitapp/include/fruitapp/fruit/mesh_to_vertex_buffer.hpp
	fruitapp/include/fruitapp/fruit/mesh_unique_ptr.hpp
	fruitapp/include/fruitapp/fruit/model_to_mesh.hpp
	fruitapp/include/fruitapp/fruit/model_vf/format.hpp
	fruitapp/include/fruitapp/fruit/model_vf/normal.hpp
	fruitapp/include/fruitapp/fruit/model_vf/part.hpp
	fruitapp/include/fruitapp/fruit/model_vf/position.hpp
	fruitapp/include/fruitapp/fruit/model_vf/texcoord.hpp
	fruitapp/include/fruitapp/fruit/model_vf/vertex_view.hpp
	fruitapp/include/fruitapp/fruit/object.hpp
	fruitapp/include/fruitapp/fruit/object_from_prototype.hpp
	fruitapp/include/fruitapp/fruit/object_fwd.hpp
	fruitapp/include/fruitapp/fruit/object_sequence.hpp
	fruitapp/include/fruitapp/fruit/object_unique_ptr.hpp
	fruitapp/include/fruitapp/fruit/plane.hpp
	fruitapp/include/fruitapp/fruit/point_cloud.hpp
	fruitapp/include/fruitapp/fruit/prototype.hpp
	fruitapp/include/fruitapp/fruit/prototype_from_json.hpp
	fruitapp/include/fruitapp/fruit/prototype_fwd.hpp
	fruitapp/include/fruitapp/fruit/prototype_sequence.hpp
	fruitapp/include/fruitapp/fruit/prototype_unique_ptr.hpp
	fruitapp/include/fruitapp/fruit/rendering/base.hpp
	fruitapp/include/fruitapp/fruit/rendering/base_fwd.hpp
	fruitapp/include/fruitapp/fruit/rendering/base_scoped_ptr.hpp
	fruitapp/include/fruitapp/fruit/rendering/base_unique_ptr.hpp
	fruitapp/include/fruitapp/fruit/rendering/cg.hpp
	fruitapp/include/fruitapp/fruit/rendering/cg_fwd.hpp
	fruitapp/include/fruitapp/fruit/rendering/draw_node.hpp
	fruitapp/include/fruitapp/fruit/rendering/draw_node_fwd.hpp
	fruitapp/include/fruitapp/fruit/rendering/ffp.hpp
	fruitapp/include/fruitapp/fruit/rendering/ffp_fwd.hpp
	fruitapp/include/fruitapp/fruit/rendering/fruit_pointer_sequence.hpp
	fruitapp/include/fruitapp/fruit/rendering/shadow.hpp
	fruitapp/include/fruitapp/fruit/rendering/shadow_fwd.hpp
	fruitapp/include/fruitapp/fruit/rendering/shadow_node.hpp
	fruitapp/include/fruitapp/fruit/rendering/shadow_node_fwd.hpp
	fruitapp/include/fruitapp/fruit/rendering/sort_fruits.hpp
	fruitapp/include/fruitapp/fruit/spawn_callback_fn.hpp
	fruitapp/include/fruitapp/fruit/spawner.hpp
	fruitapp/include/fruitapp/fruit/splatter_color.hpp
	fruitapp/include/fruitapp/fruit/tag.hpp
	fruitapp/include/fruitapp/fruit/tag_set.hpp
	fruitapp/include/fruitapp/fruit/triangle.hpp
	fruitapp/include/fruitapp/fruit/triangle_traits.hpp
	fruitapp/include/fruitapp/game_logic/object.hpp
	fruitapp/include/fruitapp/gui/create_system.hpp
	fruitapp/include/fruitapp/gui/dialogs/highscore.hpp
	fruitapp/include/fruitapp/gui/dialogs/highscore_fwd.hpp
	fruitapp/include/fruitapp/gui/dialogs/highscore_unique_ptr.hpp
	fruitapp/include/fruitapp/gui/dialogs/ingame_menu.hpp
	fruitapp/include/fruitapp/gui/dialogs/ingame_menu_fwd.hpp
	fruitapp/include/fruitapp/gui/dialogs/ingame_menu_unique_ptr.hpp
	fruitapp/include/fruitapp/gui/dialogs/main_menu.hpp
	fruitapp/include/fruitapp/gui/dialogs/main_menu_fwd.hpp
	fruitapp/include/fruitapp/gui/dialogs/main_menu_unique_ptr.hpp
	fruitapp/include/fruitapp/gui/dialogs/name_chooser.hpp
	fruitapp/include/fruitapp/gui/dialogs/name_chooser_fwd.hpp
	fruitapp/include/fruitapp/gui/dialogs/name_chooser_unique_ptr.hpp
	fruitapp/include/fruitapp/gui/dialogs/ranking.hpp
	fruitapp/include/fruitapp/gui/dialogs/ranking_fwd.hpp
	fruitapp/include/fruitapp/gui/dialogs/ranking_unique_ptr.hpp
	fruitapp/include/fruitapp/gui/dialogs/settings.hpp
	fruitapp/include/fruitapp/gui/dialogs/settings_fwd.hpp
	fruitapp/include/fruitapp/gui/dialogs/settings_unique_ptr.hpp
	fruitapp/include/fruitapp/gui/dummy/dialogs/ingame_menu.hpp
	fruitapp/include/fruitapp/gui/dummy/dialogs/main_menu.hpp
	fruitapp/include/fruitapp/gui/dummy/dialogs/name_chooser.hpp
	fruitapp/include/fruitapp/gui/dummy/dialogs/ranking.hpp
	fruitapp/include/fruitapp/gui/dummy/system.hpp
	fruitapp/include/fruitapp/gui/initial_effects_volume.hpp
	fruitapp/include/fruitapp/gui/initial_music_volume.hpp
	fruitapp/include/fruitapp/gui/sound_volume.hpp
	fruitapp/include/fruitapp/gui/system.hpp
	fruitapp/include/fruitapp/gui/system_fwd.hpp
	fruitapp/include/fruitapp/gui/system_unique_ptr.hpp
	fruitapp/include/fruitapp/highscore/callbacks/error_received.hpp
	fruitapp/include/fruitapp/highscore/callbacks/error_received_fn.hpp
	fruitapp/include/fruitapp/highscore/callbacks/list_received.hpp
	fruitapp/include/fruitapp/highscore/callbacks/list_received_fn.hpp
	fruitapp/include/fruitapp/highscore/callbacks/message_received.hpp
	fruitapp/include/fruitapp/highscore/callbacks/message_received_fn.hpp
	fruitapp/include/fruitapp/highscore/callbacks/rank_received.hpp
	fruitapp/include/fruitapp/highscore/callbacks/rank_received_fn.hpp
	fruitapp/include/fruitapp/highscore/entry.hpp
	fruitapp/include/fruitapp/highscore/entry_set.hpp
	fruitapp/include/fruitapp/highscore/entry_set_to_json.hpp
	fruitapp/include/fruitapp/highscore/json_to_entry_set.hpp
	fruitapp/include/fruitapp/highscore/name.hpp
	fruitapp/include/fruitapp/highscore/provider/connection_base.hpp
	fruitapp/include/fruitapp/highscore/provider/connection_base_fwd.hpp
	fruitapp/include/fruitapp/highscore/provider/connection_base_ptr.hpp
	fruitapp/include/fruitapp/highscore/provider/file/connection.hpp
	fruitapp/include/fruitapp/highscore/provider/file/object.hpp
	fruitapp/include/fruitapp/highscore/provider/identifier.hpp
	fruitapp/include/fruitapp/highscore/provider/net/connection.hpp
	fruitapp/include/fruitapp/highscore/provider/net/host.hpp
	fruitapp/include/fruitapp/highscore/provider/net/object.hpp
	fruitapp/include/fruitapp/highscore/provider/net/port.hpp
	fruitapp/include/fruitapp/highscore/provider/object_base.hpp
	fruitapp/include/fruitapp/highscore/provider/object_base_fwd.hpp
	fruitapp/include/fruitapp/highscore/provider_sequence.hpp
	fruitapp/include/fruitapp/highscore/providers_from_json.hpp
	fruitapp/include/fruitapp/highscore/rank.hpp
	fruitapp/include/fruitapp/highscore/score.hpp
	fruitapp/include/fruitapp/ingame_clock.hpp
	fruitapp/include/fruitapp/ingame_timer.hpp
	fruitapp/include/fruitapp/load_user_config.hpp
	fruitapp/include/fruitapp/logo.hpp
	fruitapp/include/fruitapp/machine.hpp
	fruitapp/include/fruitapp/machine_fwd.hpp
	fruitapp/include/fruitapp/machine_impl.hpp
	fruitapp/include/fruitapp/machine_impl_fwd.hpp
	fruitapp/include/fruitapp/main.hpp
	fruitapp/include/fruitapp/media_path.hpp
	fruitapp/include/fruitapp/name.hpp
	fruitapp/include/fruitapp/overlay.hpp
	fruitapp/include/fruitapp/point_sprite/base.hpp
	fruitapp/include/fruitapp/point_sprite/buffers.hpp
	fruitapp/include/fruitapp/point_sprite/choices.hpp
	fruitapp/include/fruitapp/point_sprite/collection.hpp
	fruitapp/include/fruitapp/point_sprite/color.hpp
	fruitapp/include/fruitapp/point_sprite/color_format.hpp
	fruitapp/include/fruitapp/point_sprite/connection.hpp
	fruitapp/include/fruitapp/point_sprite/elements.hpp
	fruitapp/include/fruitapp/point_sprite/object.hpp
	fruitapp/include/fruitapp/point_sprite/parameters.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/acceleration.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/linear_velocity.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/object.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/parameters.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/parameters_fwd.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/position.hpp
	fruitapp/include/fruitapp/point_sprite/splatter/size.hpp
	fruitapp/include/fruitapp/point_sprite/state_choices.hpp
	fruitapp/include/fruitapp/point_sprite/state_object.hpp
	fruitapp/include/fruitapp/point_sprite/state_parameters.hpp
	fruitapp/include/fruitapp/point_sprite/system_node.hpp
	fruitapp/include/fruitapp/point_sprite/system_node_fwd.hpp
	fruitapp/include/fruitapp/point_sprite/type_choices.hpp
	fruitapp/include/fruitapp/point_sprite/unique_base_ptr.hpp
	fruitapp/include/fruitapp/point_sprite/vector.hpp
	fruitapp/include/fruitapp/postprocessing/cg/subsystems/main.hpp
	fruitapp/include/fruitapp/postprocessing/cg/subsystems/main_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/cg/subsystems/paused.hpp
	fruitapp/include/fruitapp/postprocessing/cg/subsystems/paused_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/cg/system.hpp
	fruitapp/include/fruitapp/postprocessing/cg/system_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/create_system.hpp
	fruitapp/include/fruitapp/postprocessing/dummy/subsystems/main.hpp
	fruitapp/include/fruitapp/postprocessing/dummy/subsystems/main_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/dummy/subsystems/paused.hpp
	fruitapp/include/fruitapp/postprocessing/dummy/subsystems/paused_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/dummy/system.hpp
	fruitapp/include/fruitapp/postprocessing/dummy/system_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/render_callback.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/main.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/main_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/main_scoped_ptr.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/main_unique_ptr.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/paused.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/paused_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/paused_scoped_ptr.hpp
	fruitapp/include/fruitapp/postprocessing/subsystems/paused_unique_ptr.hpp
	fruitapp/include/fruitapp/postprocessing/system.hpp
	fruitapp/include/fruitapp/postprocessing/system_fwd.hpp
	fruitapp/include/fruitapp/postprocessing/system_scoped_ptr.hpp
	fruitapp/include/fruitapp/postprocessing/system_unique_ptr.hpp
	fruitapp/include/fruitapp/projection_manager/object.hpp
	fruitapp/include/fruitapp/projection_manager/object_fwd.hpp
	fruitapp/include/fruitapp/projection_manager/projection_change_callback.hpp
	fruitapp/include/fruitapp/projection_manager/projection_change_callback_fn.hpp
	fruitapp/include/fruitapp/projection_manager/trigger_early.hpp
	fruitapp/include/fruitapp/quick_log.hpp
	fruitapp/include/fruitapp/quick_log_fwd.hpp
	fruitapp/include/fruitapp/renderable.hpp
	fruitapp/include/fruitapp/renderer_dim2.hpp
	fruitapp/include/fruitapp/renderer_rect.hpp
	fruitapp/include/fruitapp/scene.hpp
	fruitapp/include/fruitapp/scene_fwd.hpp
	fruitapp/include/fruitapp/scoped_scene_activation.hpp
	fruitapp/include/fruitapp/scoped_time_factor.hpp
	fruitapp/include/fruitapp/screen_shooter.hpp
	fruitapp/include/fruitapp/shadow_map/mvp.hpp
	fruitapp/include/fruitapp/shadow_map/object.hpp
	fruitapp/include/fruitapp/shadow_map/object_fwd.hpp
	fruitapp/include/fruitapp/shadow_map/object_scoped_ptr.hpp
	fruitapp/include/fruitapp/shadow_map/object_unique_ptr.hpp
	fruitapp/include/fruitapp/shadow_map/optional_object_ref.hpp
	fruitapp/include/fruitapp/splatter_generator.hpp
	fruitapp/include/fruitapp/states/gameover/choose_name.hpp
	fruitapp/include/fruitapp/states/gameover/choose_name_fwd.hpp
	fruitapp/include/fruitapp/states/gameover/ranking.hpp
	fruitapp/include/fruitapp/states/gameover/ranking_fwd.hpp
	fruitapp/include/fruitapp/states/gameover/superstate.hpp
	fruitapp/include/fruitapp/states/gameover/superstate_fwd.hpp
	fruitapp/include/fruitapp/states/ingame/paused.hpp
	fruitapp/include/fruitapp/states/ingame/paused_fwd.hpp
	fruitapp/include/fruitapp/states/ingame/running.hpp
	fruitapp/include/fruitapp/states/ingame/running_fwd.hpp
	fruitapp/include/fruitapp/states/ingame/superstate.hpp
	fruitapp/include/fruitapp/states/ingame/superstate_fwd.hpp
	fruitapp/include/fruitapp/states/loading.hpp
	fruitapp/include/fruitapp/states/loading_fwd.hpp
	fruitapp/include/fruitapp/states/menu/highscore.hpp
	fruitapp/include/fruitapp/states/menu/highscore_fwd.hpp
	fruitapp/include/fruitapp/states/menu/main.hpp
	fruitapp/include/fruitapp/states/menu/main_fwd.hpp
	fruitapp/include/fruitapp/states/menu/settings.hpp
	fruitapp/include/fruitapp/states/menu/settings_fwd.hpp
	fruitapp/include/fruitapp/states/menu/superstate.hpp
	fruitapp/include/fruitapp/states/menu/superstate_fwd.hpp
	fruitapp/include/fruitapp/sword_trail.hpp
	fruitapp/include/fruitapp/systems.hpp
	fruitapp/include/fruitapp/viewport/change_callback.hpp
	fruitapp/include/fruitapp/viewport/change_callback_fn.hpp
	fruitapp/include/fruitapp/viewport/manager.hpp
	fruitapp/include/fruitapp/viewport/manager_fwd.hpp
	fruitapp/include/fruitapp/viewport/optional.hpp
	fruitapp/include/fruitapp/viewport/trigger_early.hpp
	fruitapp/src/asio_implementation.cpp
	fruitapp/src/background/base.cpp
	fruitapp/src/background/cg.cpp
	fruitapp/src/background/ffp.cpp
	fruitapp/src/background/node.cpp
	fruitapp/src/config_variables.cpp
	fruitapp/src/current_commit.cpp
	fruitapp/src/cursor_sound.cpp
	fruitapp/src/cursor_trail.cpp
	fruitapp/src/directional_light_source.cpp
	fruitapp/src/directional_light_source_from_json.cpp
	fruitapp/src/exception.cpp
	fruitapp/src/fruit/cut_context.cpp
	fruitapp/src/fruit/cut_mesh.cpp
	fruitapp/src/fruit/cut_mesh_result.cpp
	fruitapp/src/fruit/hull/projected.cpp
	fruitapp/src/fruit/hull/trail_intersection.cpp
	fruitapp/src/fruit/manager.cpp
	fruitapp/src/fruit/material/from_json.cpp
	fruitapp/src/fruit/material/object.cpp
	fruitapp/src/fruit/mesh.cpp
	fruitapp/src/fruit/mesh_to_point_cloud.cpp
	fruitapp/src/fruit/mesh_to_shape.cpp
	fruitapp/src/fruit/mesh_to_vertex_buffer.cpp
	fruitapp/src/fruit/model_to_mesh.cpp
	fruitapp/src/fruit/object.cpp
	fruitapp/src/fruit/object_from_prototype.cpp
	fruitapp/src/fruit/prototype.cpp
	fruitapp/src/fruit/prototype_from_json.cpp
	fruitapp/src/fruit/rendering/base.cpp
	fruitapp/src/fruit/rendering/cg.cpp
	fruitapp/src/fruit/rendering/draw_node.cpp
	fruitapp/src/fruit/rendering/ffp.cpp
	fruitapp/src/fruit/rendering/shadow.cpp
	fruitapp/src/fruit/rendering/shadow_node.cpp
	fruitapp/src/fruit/rendering/sort_fruits.cpp
	fruitapp/src/fruit/spawner.cpp
	fruitapp/src/game_logic/object.cpp
	fruitapp/src/gui/create_system.cpp
	fruitapp/src/gui/dialogs/highscore.cpp
	fruitapp/src/gui/dialogs/ingame_menu.cpp
	fruitapp/src/gui/dialogs/main_menu.cpp
	fruitapp/src/gui/dialogs/name_chooser.cpp
	fruitapp/src/gui/dialogs/ranking.cpp
	fruitapp/src/gui/dialogs/settings.cpp
	fruitapp/src/gui/dummy/dialogs/ingame_menu.cpp
	fruitapp/src/gui/dummy/dialogs/main_menu.cpp
	fruitapp/src/gui/dummy/dialogs/name_chooser.cpp
	fruitapp/src/gui/dummy/dialogs/ranking.cpp
	fruitapp/src/gui/dummy/system.cpp
	fruitapp/src/gui/system.cpp
	fruitapp/src/highscore/entry.cpp
	fruitapp/src/highscore/entry_set_to_json.cpp
	fruitapp/src/highscore/json_to_entry_set.cpp
	fruitapp/src/highscore/provider/connection_base.cpp
	fruitapp/src/highscore/provider/file/connection.cpp
	fruitapp/src/highscore/provider/file/object.cpp
	fruitapp/src/highscore/provider/net/connection.cpp
	fruitapp/src/highscore/provider/net/object.cpp
	fruitapp/src/highscore/provider/object_base.cpp
	fruitapp/src/highscore/providers_from_json.cpp
	fruitapp/src/load_user_config.cpp
	fruitapp/src/logo.cpp
	fruitapp/src/machine.cpp
	fruitapp/src/machine_impl.cpp
	fruitapp/src/main.cpp
	fruitapp/src/media_path.cpp
	fruitapp/src/name.cpp
	fruitapp/src/overlay.cpp
	fruitapp/src/point_sprite/base.cpp
	fruitapp/src/point_sprite/splatter/object.cpp
	fruitapp/src/point_sprite/splatter/parameters.cpp
	fruitapp/src/point_sprite/system_node.cpp
	fruitapp/src/postprocessing/cg/subsystems/main.cpp
	fruitapp/src/postprocessing/cg/subsystems/paused.cpp
	fruitapp/src/postprocessing/cg/system.cpp
	fruitapp/src/postprocessing/create_system.cpp
	fruitapp/src/postprocessing/dummy.cpp
	fruitapp/src/postprocessing/dummy/subsystems/main.cpp
	fruitapp/src/postprocessing/dummy/subsystems/paused.cpp
	fruitapp/src/postprocessing/dummy/system.cpp
	fruitapp/src/postprocessing/subsystems/main.cpp
	fruitapp/src/postprocessing/subsystems/paused.cpp
	fruitapp/src/postprocessing/system.cpp
	fruitapp/src/projection_manager/object.cpp
	fruitapp/src/quick_log.cpp
	fruitapp/src/renderable.cpp
	fruitapp/src/scene.cpp
	fruitapp/src/scoped_scene_activation.cpp
	fruitapp/src/scoped_time_factor.cpp
	fruitapp/src/screen_shooter.cpp
	fruitapp/src/shadow_map/object.cpp
	fruitapp/src/splatter_generator.cpp
	fruitapp/src/states/gameover/choose_name.cpp
	fruitapp/src/states/gameover/ranking.cpp
	fruitapp/src/states/gameover/superstate.cpp
	fruitapp/src/states/ingame/paused.cpp
	fruitapp/src/states/ingame/running.cpp
	fruitapp/src/states/ingame/superstate.cpp
	fruitapp/src/states/loading.cpp
	fruitapp/src/states/menu/highscore.cpp
	fruitapp/src/states/menu/main.cpp
	fruitapp/src/states/menu/settings.cpp
	fruitapp/src/states/menu/superstate.cpp
	fruitapp/src/sword_trail.cpp
	fruitapp/src/viewport/manager.cpp
)

fcppt_utils_append_source_dir_and_make_groups(
	"${FRUITAPP_FILES}"
	FRUITAPP_FILES_ABS)

fcppt_utils_append_source_dir_and_make_groups(
	"${FRUITAPP_CEGUI_FILES}"
	FRUITAPP_CEGUI_FILES_ABS)


if(
	USE_CEGUI)

	set(
		FRUITAPP_USE_CEGUI
		true)

	set(
		FRUITAPP_USE_CEGUI_FILES
		${FRUITAPP_CEGUI_FILES_ABS})
else()
	set(
		FRUITAPP_USE_CEGUI_FILES)
endif()

configure_file(
	${CMAKE_SOURCE_DIR}/fruitapp/src/config.hpp.in
	${CMAKE_BINARY_DIR}/include/fruitapp/config.hpp)

# app begin
awl_utils_add_portable_executable(
	fruitcut
	"fruitapp::main"
	${FRUITAPP_FILES_ABS}
	${FRUITAPP_USE_CEGUI_FILES})

include_directories(
	${CMAKE_SOURCE_DIR}/fruitlib/include)

include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}/include)

include_directories(
	${CMAKE_BINARY_DIR}/include)

target_link_libraries(
	fruitcut
	fruitlib

	${SGE_LIBRARIES}
	${Cg_LIBRARIES}

	${FcpptThreads_LIBRARIES}

	${Fcppt_core_LIBRARIES}
	${Fcppt_filesystem_LIBRARIES}
	${Awl_LIBRARIES}
	${CEGUI_LIBRARIES}
	${BULLET_LIBRARIES}
	${Boost_LIBRARIES})

install(
	TARGETS
	fruitcut
	DESTINATION
	${INSTALL_BINARY_DIR})

set(
	INSTALL_MEDIA_DIR
	${INSTALL_DATA_DIR}/fruitapp_media)

include(
	SGECustomPath)

sge_config_add_custom_path(
	fruitapp
	fruitapp_media
	${CMAKE_SOURCE_DIR}/fruitapp/fruitapp_media
	${INSTALL_MEDIA_DIR})

install(
	DIRECTORY
	${CMAKE_SOURCE_DIR}/fruitapp/fruitapp_media/
	DESTINATION
	${INSTALL_MEDIA_DIR})
