include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}/include)

set(
	FRUITLIB_FILES
	fruitlib/include/fruitlib/animation/basic.hpp
	fruitlib/include/fruitlib/animation/keyframe.hpp
	fruitlib/include/fruitlib/audio/group/buffer.hpp
	fruitlib/include/fruitlib/audio/group/buffer_fwd.hpp
	fruitlib/include/fruitlib/audio/group/player.hpp
	fruitlib/include/fruitlib/audio/group/player_fwd.hpp
	fruitlib/include/fruitlib/audio/group/sound_base.hpp
	fruitlib/include/fruitlib/audio/group/sound_base_fwd.hpp
	fruitlib/include/fruitlib/audio/group/sound_positional.hpp
	fruitlib/include/fruitlib/audio/group/sound_positional_fwd.hpp
	fruitlib/include/fruitlib/audio/music_controller.hpp
	fruitlib/include/fruitlib/audio/music_controller_fwd.hpp
	fruitlib/include/fruitlib/audio/pool.hpp
	fruitlib/include/fruitlib/audio/sound_controller.hpp
	fruitlib/include/fruitlib/audio/sound_controller_fwd.hpp
	fruitlib/include/fruitlib/average_colors.hpp
	fruitlib/include/fruitlib/basic_scoped_ostream_file_redirection_decl.hpp
	fruitlib/include/fruitlib/basic_scoped_ostream_file_redirection_fwd.hpp
	fruitlib/include/fruitlib/basic_scoped_ostream_file_redirection_impl.hpp
	fruitlib/include/fruitlib/command_line_parameters.hpp
	fruitlib/include/fruitlib/counted_reference.hpp
	fruitlib/include/fruitlib/counted_reference_decl.hpp
	fruitlib/include/fruitlib/counted_reference_fwd.hpp
	fruitlib/include/fruitlib/counted_reference_impl.hpp
	fruitlib/include/fruitlib/create_command_line_parameters.hpp
	fruitlib/include/fruitlib/delayed_ptr_sequence.hpp
	fruitlib/include/fruitlib/exception.hpp
	fruitlib/include/fruitlib/font/align_h.hpp
	fruitlib/include/fruitlib/font/align_h_fwd.hpp
	fruitlib/include/fruitlib/font/align_v.hpp
	fruitlib/include/fruitlib/font/align_v_fwd.hpp
	fruitlib/include/fruitlib/font/base_path.hpp
	fruitlib/include/fruitlib/font/cache.hpp
	fruitlib/include/fruitlib/font/cache_fwd.hpp
	fruitlib/include/fruitlib/font/identifier.hpp
	fruitlib/include/fruitlib/font/manager.hpp
	fruitlib/include/fruitlib/font/manager_fwd.hpp
	fruitlib/include/fruitlib/font/object.hpp
	fruitlib/include/fruitlib/font/object_parameters.hpp
	fruitlib/include/fruitlib/font/object_parameters_fwd.hpp
	fruitlib/include/fruitlib/font/scale.hpp
	fruitlib/include/fruitlib/font/scene_node.hpp
	fruitlib/include/fruitlib/geometry_traits/box.hpp
	fruitlib/include/fruitlib/geometry_traits/vector.hpp
	fruitlib/include/fruitlib/human_readable_time_difference.hpp
	fruitlib/include/fruitlib/json/parse_color.hpp
	fruitlib/include/fruitlib/json/parse_projection.hpp
	fruitlib/include/fruitlib/json/parse_random_float_distribution.hpp
	fruitlib/include/fruitlib/json/parse_random_int_distribution.hpp
	fruitlib/include/fruitlib/json/parse_rgba8_color.hpp
	fruitlib/include/fruitlib/log/scoped.hpp
	fruitlib/include/fruitlib/log/scoped_sequence.hpp
	fruitlib/include/fruitlib/log/scoped_sequence_from_json.hpp
	fruitlib/include/fruitlib/log/string_to_location.hpp
	fruitlib/include/fruitlib/math/box_radius.hpp
	fruitlib/include/fruitlib/math/cut_triangle_at_plane.hpp
	fruitlib/include/fruitlib/math/line/basic.hpp
	fruitlib/include/fruitlib/math/line/distance_to_point.hpp
	fruitlib/include/fruitlib/math/line_plane_intersection.hpp
	fruitlib/include/fruitlib/math/plane/basic.hpp
	fruitlib/include/fruitlib/math/plane/distance_to_point.hpp
	fruitlib/include/fruitlib/math/plane/from_vec4.hpp
	fruitlib/include/fruitlib/math/plane/normalize.hpp
	fruitlib/include/fruitlib/math/triangle/area.hpp
	fruitlib/include/fruitlib/math/triangle/basic.hpp
	fruitlib/include/fruitlib/math/triangle/create_from_interpolation.hpp
	fruitlib/include/fruitlib/math/triangle/interpolation_pair.hpp
	fruitlib/include/fruitlib/math/triangle/random_point.hpp
	fruitlib/include/fruitlib/math/triangle/scalar_type.hpp
	fruitlib/include/fruitlib/math/triangle/size_type.hpp
	fruitlib/include/fruitlib/math/triangle/to_plane.hpp
	fruitlib/include/fruitlib/math/triangle/vector_type.hpp
	fruitlib/include/fruitlib/math/triangle/vertex_access.hpp
	fruitlib/include/fruitlib/math/triangle/weak_compare.hpp
	fruitlib/include/fruitlib/math/triangle_plane_intersection.hpp
	fruitlib/include/fruitlib/math/unproject.hpp
	fruitlib/include/fruitlib/math/view_plane_distance.hpp
	fruitlib/include/fruitlib/math/view_plane_rect.hpp
	fruitlib/include/fruitlib/message_box.hpp
	fruitlib/include/fruitlib/optional_perspective_projection_information.hpp
	fruitlib/include/fruitlib/performance_timer.hpp
	fruitlib/include/fruitlib/perspective_projection_information.hpp
	fruitlib/include/fruitlib/perspective_projection_information_fwd.hpp
	fruitlib/include/fruitlib/perspective_projection_information_to_matrix.hpp
	fruitlib/include/fruitlib/physics/box.hpp
	fruitlib/include/fruitlib/physics/debugger.hpp
	fruitlib/include/fruitlib/physics/debugger_fwd.hpp
	fruitlib/include/fruitlib/physics/duration.hpp
	fruitlib/include/fruitlib/physics/group/id.hpp
	fruitlib/include/fruitlib/physics/group/object.hpp
	fruitlib/include/fruitlib/physics/group/object_fwd.hpp
	fruitlib/include/fruitlib/physics/group/sequence.hpp
	fruitlib/include/fruitlib/physics/matrix3.hpp
	fruitlib/include/fruitlib/physics/matrix3_to_matrix4.hpp
	fruitlib/include/fruitlib/physics/matrix4.hpp
	fruitlib/include/fruitlib/physics/matrix4_to_matrix3.hpp
	fruitlib/include/fruitlib/physics/nodes/debugger.hpp
	fruitlib/include/fruitlib/physics/nodes/world.hpp
	fruitlib/include/fruitlib/physics/null_collision_filter.hpp
	fruitlib/include/fruitlib/physics/rigid_body/angular_velocity.hpp
	fruitlib/include/fruitlib/physics/rigid_body/collision_callback.hpp
	fruitlib/include/fruitlib/physics/rigid_body/collision_callback_fn.hpp
	fruitlib/include/fruitlib/physics/rigid_body/collision_data.hpp
	fruitlib/include/fruitlib/physics/rigid_body/linear_velocity.hpp
	fruitlib/include/fruitlib/physics/rigid_body/mass.hpp
	fruitlib/include/fruitlib/physics/rigid_body/object.hpp
	fruitlib/include/fruitlib/physics/rigid_body/object_fwd.hpp
	fruitlib/include/fruitlib/physics/rigid_body/optional_mass.hpp
	fruitlib/include/fruitlib/physics/rigid_body/parameters.hpp
	fruitlib/include/fruitlib/physics/rigid_body/parameters_fwd.hpp
	fruitlib/include/fruitlib/physics/rigid_body/position.hpp
	fruitlib/include/fruitlib/physics/rigid_body/scoped.hpp
	fruitlib/include/fruitlib/physics/rigid_body/solidity.hpp
	fruitlib/include/fruitlib/physics/rigid_body/transformation.hpp
	fruitlib/include/fruitlib/physics/rigid_body/user_data.hpp
	fruitlib/include/fruitlib/physics/scalar.hpp
	fruitlib/include/fruitlib/physics/shared_shape_ptr.hpp
	fruitlib/include/fruitlib/physics/structure_cast.hpp
	fruitlib/include/fruitlib/physics/vector3.hpp
	fruitlib/include/fruitlib/physics/world.hpp
	fruitlib/include/fruitlib/physics/world_fwd.hpp
	fruitlib/include/fruitlib/pp/dependency_set.hpp
	fruitlib/include/fruitlib/pp/filter/add.hpp
	fruitlib/include/fruitlib/pp/filter/base.hpp
	fruitlib/include/fruitlib/pp/filter/base_fwd.hpp
	fruitlib/include/fruitlib/pp/filter/binary.hpp
	fruitlib/include/fruitlib/pp/filter/blur.hpp
	fruitlib/include/fruitlib/pp/filter/desaturate.hpp
	fruitlib/include/fruitlib/pp/filter/highlight.hpp
	fruitlib/include/fruitlib/pp/filter/inject_texture.hpp
	fruitlib/include/fruitlib/pp/filter/iterations.hpp
	fruitlib/include/fruitlib/pp/filter/ivec2_parameter.hpp
	fruitlib/include/fruitlib/pp/filter/manager.hpp
	fruitlib/include/fruitlib/pp/filter/manager_fwd.hpp
	fruitlib/include/fruitlib/pp/filter/nullary.hpp
	fruitlib/include/fruitlib/pp/filter/render_to_texture.hpp
	fruitlib/include/fruitlib/pp/filter/texture_size.hpp
	fruitlib/include/fruitlib/pp/filter/unary.hpp
	fruitlib/include/fruitlib/pp/filter/wrapper.hpp
	fruitlib/include/fruitlib/pp/screen_vf/format.hpp
	fruitlib/include/fruitlib/pp/screen_vf/part.hpp
	fruitlib/include/fruitlib/pp/screen_vf/position.hpp
	fruitlib/include/fruitlib/pp/screen_vf/quad.hpp
	fruitlib/include/fruitlib/pp/screen_vf/vertex_view.hpp
	fruitlib/include/fruitlib/pp/system.hpp
	fruitlib/include/fruitlib/pp/system_fwd.hpp
	fruitlib/include/fruitlib/pp/texture/counted_instance.hpp
	fruitlib/include/fruitlib/pp/texture/depth_stencil_format.hpp
	fruitlib/include/fruitlib/pp/texture/descriptor.hpp
	fruitlib/include/fruitlib/pp/texture/instance.hpp
	fruitlib/include/fruitlib/pp/texture/instance_fwd.hpp
	fruitlib/include/fruitlib/pp/texture/is_locked.hpp
	fruitlib/include/fruitlib/pp/texture/manager.hpp
	fruitlib/include/fruitlib/pp/texture/manager_fwd.hpp
	fruitlib/include/fruitlib/pp/texture/use_screen_size.hpp
	fruitlib/include/fruitlib/random_generator.hpp
	fruitlib/include/fruitlib/random_generator_fwd.hpp
	fruitlib/include/fruitlib/rectangle_manager/duration.hpp
	fruitlib/include/fruitlib/rectangle_manager/object.hpp
	fruitlib/include/fruitlib/rectangle_manager/object_decl.hpp
	fruitlib/include/fruitlib/rectangle_manager/object_fwd.hpp
	fruitlib/include/fruitlib/rectangle_manager/object_impl.hpp
	fruitlib/include/fruitlib/rectangle_manager/padding.hpp
	fruitlib/include/fruitlib/rectangle_manager/rectangle_instance.hpp
	fruitlib/include/fruitlib/rectangle_manager/rectangle_instance_decl.hpp
	fruitlib/include/fruitlib/rectangle_manager/rectangle_instance_fwd.hpp
	fruitlib/include/fruitlib/rectangle_manager/rectangle_instance_impl.hpp
	fruitlib/include/fruitlib/resource_tree/from_directory_tree.hpp
	fruitlib/include/fruitlib/resource_tree/is_resource_tree.hpp
	fruitlib/include/fruitlib/resource_tree/make_type.hpp
	fruitlib/include/fruitlib/resource_tree/navigate_to_path.hpp
	fruitlib/include/fruitlib/resource_tree/node.hpp
	fruitlib/include/fruitlib/resource_tree/object.hpp
	fruitlib/include/fruitlib/resource_tree/path.hpp
	fruitlib/include/fruitlib/scenic/adaptors/camera.hpp
	fruitlib/include/fruitlib/scenic/adaptors/line_drawer.hpp
	fruitlib/include/fruitlib/scenic/base.hpp
	fruitlib/include/fruitlib/scenic/base_fwd.hpp
	fruitlib/include/fruitlib/scenic/delta/callback.hpp
	fruitlib/include/fruitlib/scenic/delta/clock.hpp
	fruitlib/include/fruitlib/scenic/delta/clock_impl.hpp
	fruitlib/include/fruitlib/scenic/delta/duration.hpp
	fruitlib/include/fruitlib/scenic/delta/timer.hpp
	fruitlib/include/fruitlib/scenic/depth.hpp
	fruitlib/include/fruitlib/scenic/detail/has_scene_reactions.hpp
	fruitlib/include/fruitlib/scenic/detail/reaction_chooser.hpp
	fruitlib/include/fruitlib/scenic/events/base.hpp
	fruitlib/include/fruitlib/scenic/events/base_fwd.hpp
	fruitlib/include/fruitlib/scenic/events/render.hpp
	fruitlib/include/fruitlib/scenic/events/update.hpp
	fruitlib/include/fruitlib/scenic/no_parent.hpp
	fruitlib/include/fruitlib/scenic/node.hpp
	fruitlib/include/fruitlib/scenic/optional_parent.hpp
	fruitlib/include/fruitlib/scenic/parent.hpp
	fruitlib/include/fruitlib/scenic/parent_fwd.hpp
	fruitlib/include/fruitlib/scoped_frame_limiter.hpp
	fruitlib/include/fruitlib/scoped_ostream_file_redirection.hpp
	fruitlib/include/fruitlib/scoped_wostream_file_redirection.hpp
	fruitlib/include/fruitlib/signal_stack_printer/object.hpp
	fruitlib/include/fruitlib/signal_stack_printer/object_fwd.hpp
	fruitlib/include/fruitlib/texture_manager.hpp
	fruitlib/include/fruitlib/texture_manager_fwd.hpp
	fruitlib/include/fruitlib/time_format/context.hpp
	fruitlib/include/fruitlib/time_format/duration_to_string.hpp
	fruitlib/include/fruitlib/time_format/find_and_convert_duration.hpp
	fruitlib/include/fruitlib/time_format/formatter_fwd.hpp
	fruitlib/include/fruitlib/time_format/grammar.hpp
	fruitlib/include/fruitlib/time_format/milliseconds.hpp
	fruitlib/include/fruitlib/time_format/minutes.hpp
	fruitlib/include/fruitlib/time_format/seconds.hpp
	fruitlib/include/fruitlib/time_format/string_to_duration.hpp
	fruitlib/include/fruitlib/time_format/string_to_duration_exn.hpp
	fruitlib/include/fruitlib/time_format/tags/milliseconds.hpp
	fruitlib/include/fruitlib/time_format/tags/minutes.hpp
	fruitlib/include/fruitlib/time_format/tags/seconds.hpp
	fruitlib/include/fruitlib/uniform_int_random.hpp
	fruitlib/include/fruitlib/uniform_random_range_element.hpp
	fruitlib/include/fruitlib/uniform_random_range_element_decl.hpp
	fruitlib/include/fruitlib/uniform_random_range_element_fwd.hpp
	fruitlib/include/fruitlib/uniform_random_range_element_impl.hpp
	fruitlib/include/fruitlib/uniform_real_random.hpp
	fruitlib/src/audio/group/buffer.cpp
	fruitlib/src/audio/group/player.cpp
	fruitlib/src/audio/group/sound_base.cpp
	fruitlib/src/audio/group/sound_positional.cpp
	fruitlib/src/audio/music_controller.cpp
	fruitlib/src/audio/pool.cpp
	fruitlib/src/audio/sound_controller.cpp
	fruitlib/src/average_colors.cpp
	fruitlib/src/create_command_line_parameters.cpp
	fruitlib/src/exception.cpp
	fruitlib/src/font/cache.cpp
	fruitlib/src/font/manager.cpp
	fruitlib/src/font/object.cpp
	fruitlib/src/font/object_parameters.cpp
	fruitlib/src/font/scene_node.cpp
	fruitlib/src/human_readable_time_difference.cpp
	fruitlib/src/json/parse_projection.cpp
	fruitlib/src/json/parse_rgba8_color.cpp
	fruitlib/src/log/scoped.cpp
	fruitlib/src/log/scoped_sequence_from_json.cpp
	fruitlib/src/log/string_to_location.cpp
	fruitlib/src/math/view_plane_distance.cpp
	fruitlib/src/math/view_plane_rect.cpp
	fruitlib/src/message_box.cpp
	fruitlib/src/performance_timer.cpp
	fruitlib/src/perspective_projection_information.cpp
	fruitlib/src/perspective_projection_information_to_matrix.cpp
	fruitlib/src/physics/debugger.cpp
	fruitlib/src/physics/group/object.cpp
	fruitlib/src/physics/nodes/debugger.cpp
	fruitlib/src/physics/nodes/world.cpp
	fruitlib/src/physics/null_collision_filter.cpp
	fruitlib/src/physics/rigid_body/collision_data.cpp
	fruitlib/src/physics/rigid_body/object.cpp
	fruitlib/src/physics/rigid_body/parameters.cpp
	fruitlib/src/physics/rigid_body/scoped.cpp
	fruitlib/src/physics/world.cpp
	fruitlib/src/pp/filter/add.cpp
	fruitlib/src/pp/filter/base.cpp
	fruitlib/src/pp/filter/binary.cpp
	fruitlib/src/pp/filter/blur.cpp
	fruitlib/src/pp/filter/desaturate.cpp
	fruitlib/src/pp/filter/highlight.cpp
	fruitlib/src/pp/filter/inject_texture.cpp
	fruitlib/src/pp/filter/manager.cpp
	fruitlib/src/pp/filter/nullary.cpp
	fruitlib/src/pp/filter/render_to_texture.cpp
	fruitlib/src/pp/filter/unary.cpp
	fruitlib/src/pp/filter/wrapper.cpp
	fruitlib/src/pp/screen_vf/quad.cpp
	fruitlib/src/pp/system.cpp
	fruitlib/src/pp/texture/descriptor.cpp
	fruitlib/src/pp/texture/instance.cpp
	fruitlib/src/pp/texture/manager.cpp
	fruitlib/src/pp/texture/use_screen_size.cpp
	fruitlib/src/resource_tree/path.cpp
	fruitlib/src/scenic/adaptors/camera.cpp
	fruitlib/src/scenic/adaptors/line_drawer.cpp
	fruitlib/src/scenic/base.cpp
	fruitlib/src/scenic/delta/clock.cpp
	fruitlib/src/scenic/events/base.cpp
	fruitlib/src/scenic/events/render.cpp
	fruitlib/src/scenic/events/update.cpp
	fruitlib/src/scenic/no_parent.cpp
	fruitlib/src/scenic/parent.cpp
	fruitlib/src/scoped_frame_limiter.cpp
	fruitlib/src/signal_stack_printer/object.cpp
	fruitlib/src/texture_manager.cpp
	fruitlib/src/time_format/milliseconds.cpp
	fruitlib/src/time_format/minutes.cpp
	fruitlib/src/time_format/seconds.cpp
)

set(
	FRUITLIB_CEGUI_FILES
	fruitlib/include/fruitlib/scenic/adaptors/ce/gui_system.hpp
	fruitlib/src/scenic/adaptors/ce/gui_system.cpp
)

if(
	USE_CEGUI
)
	list(
		APPEND
		FRUITLIB_FILES
		${FRUITLIB_CEGUI_FILES}
	)
endif()

# This is for message_box.cpp which uses windows.h
if(MSVC)
	add_definitions(
		-DUNICODE=1
		-D_UNICODE=1)
endif()

fcppt_utils_append_source_dir_and_make_groups(
	"${FRUITLIB_FILES}"
	FRUITLIB_FILES_ABS)

add_library(
	fruitlib
	STATIC
	${FRUITLIB_FILES_ABS})

fcppt_utils_set_target_compiler_flags(
	fruitlib)

target_link_libraries(
	fruitlib
	${fcppt_core_TARGET}
	${fcppt_filesystem_TARGET}
	${fcppt_log_TARGET}
	${CEGUI_LIBRARIES}
	${sge_TARGETS}
	${Cg_LIBRARIES}
	${BULLET_LIBRARIES}
	${Boost_LIBRARIES})
