FIND_PACKAGE(
	Boost 1.40.0 REQUIRED COMPONENTS
	unit_test_framework
)

FUNCTION(
	ADD_FRUITCUT_TEST
	PATHNAME)
	STRING(REGEX REPLACE "\\/" "_" TESTNAME ${PATHNAME})

	SET(FRUITCUT_TEST_NAME fruitcut_${TESTNAME}_test)

	ADD_EXECUTABLE(${FRUITCUT_TEST_NAME} ${PATHNAME}.cpp ${ARGN})

	SET_PROPERTY(
		TARGET ${FRUITCUT_TEST_NAME}
		PROPERTY COMPILE_FLAGS
		"-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MODULE=${TESTNAME}")

	TARGET_LINK_LIBRARIES (
		${FRUITCUT_TEST_NAME}
		${FRUITCUT_DEFAULT_LINK_TARGET}
		${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
		${FCPPT_LIBRARIES}
		${SGE_LIBRARIES}
	)

	ADD_TEST(
		NAME
		${FRUITCUT_TEST_NAME}
		COMMAND
		${FRUITCUT_TEST_NAME}
	)
ENDFUNCTION()

ADD_FRUITCUT_TEST(math)
ADD_FRUITCUT_TEST(delayed_sequence)
